event listener para tecla enter

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --cor-primaria: #F55B64;
+    --cor-primaria: #26327F;
     --cor-secundaria: #C2373F;
     --neutro: #F9F9F9;
     --preto: #131730;
